styling various areas of interface

--- a/src/views/contractor.html
+++ b/src/views/contractor.html
@@ -37,7 +37,7 @@
 <script type="text/ng-template" id="views-contractors-contract-select.html">
   <div>
     <label>Contract</label>
-    <pre>{{ contractor.contract | json }}</pre>
+    <!-- <pre>{{ contractor.contract | json }}</pre> -->
     <ui-select
       ng-change="contractor.refresh()"
       ng-model="contractor.contract"
