--- a/src/views/inspector.html
+++ b/src/views/inspector.html
@@ -20,18 +20,17 @@
       class="content">
     </div -->
 
-    <!--pre>{{ current.ordered | json }}</pre-->
     <form-fields
-      
+
       ng-hide="this.collapsed"
 
       fields="layout.currentItem.ordered"
-      
-      vii-model="layout.currentItem"
+
+      model="layout.currentItem"
 
       dictionary="data"
       behaviors="methods"
-      
+
     ></form-fields>
 
   </div>
