--- a/src/views/main.html
+++ b/src/views/main.html
@@ -57,6 +57,9 @@
   </details>
 
   <p><button id="updateJSON" ng-click="updateJSON()">update json</button></p>
+
+  <img alt="Ångsturm Logo" src="/img/angsturm-logo.svg" />
+
 </div>
 
 <div><ng-include ng-if="isMode('debug','dev')" src="'views/debug.html'"></ng-include></div>
